# e-commerce-api

./: .env  Cargo.toml  README.md
migrations/2022-06-21-101955_product_create/: down.sql  up.sql
migrations/2022-06-21-170612_product_insert/: down.sql  up.sql
migrations/2022-06-26-113103_product_image/: up.sql
migrations/2022-06-26-135333_product_stock/: down.sql  up.sql
src/: application.rs  configuration.rs  connection.rs  main.rs  product_handler.rs  product_model.rs  schema.rs
