[package]
name = "product_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-cors= "0.6.1"
serde = "1.0.137"
serde_json = "1.0.81"
serde_derive = "1.0.137"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2"] }
r2d2 = "0.8"
env_logger = "0.9.0"
image = "0.24.2"
base64 = "0.13.0"